# brotli-rs2js

./: .dockerignore  .gitignore  Brotli.podspec  Cargo.toml  Dockerfile  README.md  build.sh  index.js  jest.config.js  package.json  tsconfig.json
android/: build.gradle  jni_build.sh
android/src/main/: AndroidManifest.xml
android/src/main/java/za/co/agriio/brotli/: BrotliModule.java  BrotliPackage.java  Native.java
ffi/: Cargo.toml  cbindgen.toml
ffi/src/: lib.rs
ios/: .gitignore  Brotli.h  Brotli.m
ios/Brotli.xcodeproj/: project.pbxproj
ios/Brotli.xcworkspace/: contents.xcworkspacedata
ios/swift/: Package.swift  build_ffi.sh
ios/swift/Sources/BrotliFfi/: brotli_ffi.h
java/: .gitignore  build.gradle  jni_build.sh  settings.gradle
java/android/: build.gradle
java/android/src/main/: AndroidManifest.xml
java/lib/: build.gradle
java/lib/src/test/groovy/za/co/agriio/brotli/: LibraryTest.groovy
jni/: Cargo.toml
jni/src/: lib.rs
lib/: brotli_rs2js.d.ts  brotli_rs2js.js  brotli_rs2js_bg.js  brotli_rs2js_bg.wasm  brotli_rs2js_bg.wasm.d.ts  brotli_rs2js_bg1.js  index.d.ts
src/: lib.rs
swift/: build_ffi.sh
swift/Sources/BrotliFfi/: brotli_ffi.h  module.modulemap
tests/: brotli_compress_decompress.spec.ts
