[package]
name = "libbrotli-ffi"
version = "0.1.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []

[dependencies]
brotli = "3.3.0"
bytes = "1"
c_vec = "1"
libc = "0.2"
ffi-support = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
