[package]
name = "brotli-jni"
version = "0.1.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []

[dependencies]
jni = "0.19"

[dependencies.libbrotli-ffi]
path = "../ffi"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
